kubernetes/apps/home/emqx/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx
  namespace: home
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "false"
    gatus.home-operations.com/endpoint: |-
      group: home
      conditions:
        - "[STATUS] == 200"
spec:
  hostnames:
    - "emqx.${SECRET_DOMAIN}" # yayamlls-disable-line
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: emqx
          port: 18083
